# HandwrittenOCR

./: .gitignore  Model.ipynb  get_data.py  main.py  pyproject.toml  training_model.ipynb
.gradio/flagged/: dataset1.csv
core/: crnn.py  run_inference.py  tokenizer.py
include/: tokens.json
scripts/: check_data.py  clean_json_bad_names.py  generate_tokens_file.py  split_data.py
tests/: test_process_img.py  test_utils.py
tests/examples/: test_data.json
utils/: datasets.py  preprocessing.py
