[project]
name = "handwrittenocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
  "click>=8.3.1",
  "kagglehub>=1.0.0",
  "matplotlib>=3.10.8",
  "notebook>=7.5.4",
  "pytest>=9.0.2",
  "torch>=2.10.0",
  "torchvision>=0.25.0",
]


[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["."]
